--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Recast.ly - Recast Yourself</title>
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles/style.css">
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/react/dist/react.js"></script>
-  <script src="node_modules/react-dom/dist/react-dom.js"></script>
-  <script src="node_modules/lodash/lodash.js"></script>
+  <title>Course Content</title>
 </head>
 <body>
-  <div id="app">
-    <h5>
-      <br/><br/>
-      this message will disappear when <em>app</em> view is correctly rendered
-      <br/><br/><br/>
-    </h5>
-  </div>
-  <script type="module" src="compiled/src/components/VideoListEntry.js"></script>
-  <script type="module" src="compiled/src/components/VideoList.js"></script>
-  <script type="module" src="compiled/src/components/VideoPlayer.js"></script>
-  <script type="module" src="compiled/src/components/Search.js"></script>
-  <script type="module" src="compiled/src/components/App.js"></script>
-  <script type="module" src="compiled/src/index.js"></script>
+<div id="courseContent"></div>
+<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
