Updated Style.css and Bundle

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <script type ="test/javascript" src ="script.js"> </script>
 </head>
 <body>
-<div id="courseContent"></div>
+<div id="app"></div>
 
 <script type="text/javascript" src="bundle.js"></script>
 </body>
